# CPSProject

./: LICENSE  PACKAGE_HELP.md  README.md  Relazione_CaseStudy.ipynb  case_study.ipynb  pyproject.toml  setup.cfg
WB/: main.py
docs/src/opandas/: index.html
docs/src/opandas/api/: fetch.html  index.html  plots.html
docs/src/opandas/sqlite/: cache_db.html  constants.html  index.html
docs/src/opandas/wb/: Indicator.html  Observable.html  Topic.html  download_wb.html  index.html  interface.html  plotter.html
resources/: create_tables.sql  get_topic.sql  insert_all_topics.sql  remove_topic.sql
src/: case_study.ipynb
src/api/: fetch.py  plots.py
src/opandas_wb/: __init__.py
src/opandas_wb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/opandas_wb/api/: __init__.py  fetch.py  plots.py
src/opandas_wb/sqlite/: __init__.py  cache.db  cache_db.py  constants.py
src/opandas_wb/wb/: Indicator.py  Observable.py  Topic.py  __init__.py  download_wb.py  plotter.py
src/resources/: get_topic.sql  remove_topic.sql
src/sqlite/: __init__.py  cache_db.py  constants.py
src/wb/: Indicator.py  Observable.py  Plotter.py  Topic.py  __init__.py  download_wb.py  interface.py  main.py  plotter.py  stat_plot_manager.py
tests/: api_test.py  db_test.py  plot_test.py
tests/sqlite/: db_test.py
