[metadata]
name = opandasWorldBank
version = 0.0.9
author = Operation P.A.N.D.A.S.
description = Libreria Worldbank per il corso Complementi di Probabilità e Statistica
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ElisaVerza/CPSProject
project_urls =
    Bug Tracker = https://github.com/ElisaVerza/CPSProject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src